# freetype-gl

./: CMakeLists.txt  callbacks.c  callbacks.h  demo-gamma.c  demo-subpixel.c  ext_funcs.c  ext_funcs.h  font-manager.c  opengl.h  opengl_funcs.h  platform.h  project.h.in  shader.c  shader.h  text-buffer.c  text-buffer.h  texture-atlas.c  texture-font.c  texture-font.h  vec234.h  vector.c  vertex-attribute.c  vertex-buffer.c
demos/: CMakeLists.txt  demo-ansi.c  demo-atb-agg.c  demo-benchmark.c  demo-cartoon.c  demo-console.c  demo-cube.c  demo-distance-field-2.c  demo-distance-field-3.c  demo-font.c  demo-gamma.c  demo-glyph.c  demo-lcd.c  demo-outline.c  demo-subpixel.c  demo-texture.c
src/: CMakeLists.txt  callbacks.c  callbacks.h  ext_funcs.c  ext_funcs.h  font-manager.c  freetype-gl.h  markup.h  mat4.c  opengl.h  opengl_funcs.h  platform.h  shader.c  shader.h  text-buffer.c  text-buffer.h  texture-atlas.c  texture-font.c  texture-font.h  vec234.h  vector.c  vertex-attribute.c  vertex-buffer.c  vertex-buffer.h
